skeleton components and style

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,8 +1,11 @@
 // Abstracts
-@import './mixins';
-@import './variables';
+@import 'mixins';
+@import 'variables';
 
 // Base
-@import './globals';
+@import 'globals';
 
 // Components
+@import 'app';
+@import 'form';
+@import 'checklist';
