--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -14,6 +14,9 @@ body {
   padding: 0;
   font-family: 'Open Sans', sans-serif;
   overflow-x: hidden;
+  background-color: $mainLight;
+  color: $fontLight;
+  min-height: 100vh;
 }
 
 h1,
