create and style checklist, listitem, form functionality

--- a/src/assets/styles/_checklist.scss
+++ b/src/assets/styles/_checklist.scss
@@ -1,9 +1,9 @@
 .checklist {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
   &__ul {
-    width: 300px;
   }
 }
