--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -4,7 +4,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: $fontLg;
+    font-size: 2.5rem;
     color: $fontHeadinglight;
+
+    @include breakpoint-down(smedium) {
+      font-size: 2.25rem;
+    }
+
+    @include breakpoint-down(small) {
+      font-size: $fontMd;
+    }
   }
 }
