--- a/src/assets/styles/_theme.scss
+++ b/src/assets/styles/_theme.scss
@@ -11,6 +11,13 @@
   border-radius: 50%;
   transition: all 200ms ease-in-out;
   cursor: pointer;
+
+  @include breakpoint-down(small) {
+    width: 30px;
+    height: 30px;
+    margin: 1rem 0 0 0;
+    font-size: $fontMd;
+  }
 }
 
 .theme::before {
